test/tests/stages/9_functions/valid/arguments_in_registers/single_arg.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: twice
        List[1]: 
          TIdentifier: x
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CMultiply: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: twice
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
